// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatResults > can sort summary by num of errors 1`] = `
" ✨  Summary of failing ESLint rules 
errors 0 warnings 1 rule: rule1
errors 1 warnings 0 rule: rule3
errors 2 warnings 0 rule: rule2
🔥  4 problems in total (3 errors, 1 warnings)"
`;

exports[`formatResults > can sort summary by num of errors 2`] = `
" ✨  Summary of failing ESLint rules 
errors 2 warnings 0 rule: rule2
errors 1 warnings 0 rule: rule3
errors 0 warnings 1 rule: rule1
🔥  4 problems in total (3 errors, 1 warnings)"
`;

exports[`formatResults > can sort summary by num of warnings 1`] = `
" ✨  Summary of failing ESLint rules 
errors 1 warnings 0 rule: rule3
errors 0 warnings 1 rule: rule1
errors 0 warnings 2 rule: rule2
🔥  4 problems in total (1 errors, 3 warnings)"
`;

exports[`formatResults > can sort summary by num of warnings 2`] = `
" ✨  Summary of failing ESLint rules 
errors 0 warnings 2 rule: rule2
errors 0 warnings 1 rule: rule1
errors 1 warnings 0 rule: rule3
🔥  4 problems in total (1 errors, 3 warnings)"
`;

exports[`formatResults > can sort summary by rule id 1`] = `
" ✨  Summary of failing ESLint rules 
errors 0 warnings 1 rule: rule1
errors 0 warnings 2 rule: rule2
errors 1 warnings 0 rule: rule3
🔥  4 problems in total (1 errors, 3 warnings)"
`;

exports[`formatResults > can sort summary by rule id 2`] = `
" ✨  Summary of failing ESLint rules 
errors 1 warnings 0 rule: rule3
errors 0 warnings 2 rule: rule2
errors 0 warnings 1 rule: rule1
🔥  4 problems in total (1 errors, 3 warnings)"
`;

exports[`formatResults > defaults to sorting summary by rule id / ascending 1`] = `
" ✨  Summary of failing ESLint rules 
errors 1 warnings 1 rule: A
errors 0 warnings 1 rule: B
errors 1 warnings 1 rule: C
🔥  5 problems in total (2 errors, 3 warnings)"
`;

exports[`formatResults > provides header, summary of rules and total 1`] = `
" ✨  Summary of failing ESLint rules 
errors 0 warnings 1 rule: rule1
errors 0 warnings 2 rule: rule2
errors 2 warnings 0 rule: rule3
errors 1 warnings 0 rule: rule4
errors 1 warnings 0 rule: rule5
🔥  7 problems in total (4 errors, 3 warnings)"
`;
